<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="#7ac2f4"
    android:id="@+id/drawImageLayout" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/retIndex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/index" />

        <Button
            android:id="@+id/drawSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_margin="10dp"
            android:background="@drawable/save"
            android:text="" />

        <Button
            android:id="@+id/drawColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="34dp"
            android:layout_toRightOf="@+id/retIndex"
            android:text="@string/drawColor" />

        <Button
            android:id="@+id/clearDraw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginRight="20dp"
            android:layout_toLeftOf="@+id/drawSave"
            android:text="@string/clear" />

    </RelativeLayout>

</LinearLayout>